Avoid setting CustomEvent.detail property in initCustomEvent while dispatch an event.

BUG=684843

Review-Url: https://codereview.chromium.org/2679933003
Cr-Commit-Position: refs/heads/master@{#448794}

Former-commit-id: aa57f762dfa15e283219c3ff3e9c8b9d611cae7c